--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wd_201",
+  "name": "hello-node",
   "version": "1.0.0",
   "description": "second node project",
   "main": "index.js",
