--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello-node",
   "version": "1.0.0",
-  "description": "second node project",
+  "description": "My First node project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
