--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Priyanka Reddy <priyankared4567@gmail.com>",
+  "author": "Priyanka Reddy <pr6336647@gmail.com>",
   "license": "ISC"
 }
